# Cyancia

./: Cargo.toml
assets/: actions.actions
crates/cyancia_actions/: Cargo.toml
crates/cyancia_actions/src/: canvas_control.rs  control.rs  file.rs  lib.rs  shell.rs  task.rs  utils.rs
crates/cyancia_actions/src/files/: open.rs
crates/cyancia_app/: Cargo.toml
crates/cyancia_app/src/: input_manager.rs  main.rs  main_view.rs
crates/cyancia_canvas/: Cargo.toml  build.rs
crates/cyancia_canvas/src/: control.rs  lib.rs  render.rs  widget.rs
crates/cyancia_canvas/src/action/: control.rs  mod.rs
crates/cyancia_canvas/src/shaders/: canvas_present.wesl  canvas_render.wesl
crates/cyancia_image/: Cargo.toml
crates/cyancia_image/src/: layer.rs  lib.rs  tile.rs
crates/cyancia_input/: Cargo.toml
crates/cyancia_input/src/: lib.rs  mouse.rs
crates/cyancia_input/src/action/: matching.rs  mod.rs
crates/cyancia_render/: Cargo.toml
crates/cyancia_render/src/: lib.rs  resources.rs
crates/cyancia_tools/: Cargo.toml
crates/cyancia_tools/src/: brush.rs  canvas_pan.rs  lib.rs
crates/cyancia_windows/: Cargo.toml
crates/cyancia_windows/src/: lib.rs
crates/cyancia_windows/src/main_view/: input_manager.rs  mod.rs
examples/example_input/src/: main.rs
