[package]
name = "cyancia_app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced.workspace = true
cyancia_canvas.workspace = true
log.workspace = true
cyancia_assets.workspace = true
cyancia_input.workspace = true
futures.workspace = true
cyancia_id.workspace = true
cyancia_tools.workspace = true
tracing-subscriber.workspace = true
